--- a/Views/Cameras/Details.cshtml
+++ b/Views/Cameras/Details.cshtml
@@ -11,6 +11,21 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.ID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ID)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Class)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Class)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Make)
         </dt>
 
