--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,20 +14,20 @@
         <p>
            Stuff for sale.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Cameras", "Index", "Cameras")</p>
     </div>
     <div class="col-md-4">
         <h2>Lenses</h2>
         <p>
             Stuff for sale.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Lenses", "Index", "Lenses")</p>
     </div>
     <div class="col-md-4">
         <h2>Flashes</h2>
         <p>
             Stuff for sale.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Flashes", "Index", "Flashes")</p>
     </div>
 </div>
