--- a/Views/Flashes/Delete.cshtml
+++ b/Views/Flashes/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.ID)
+        </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Class)
+        </dt>
+        <dt>
             @Html.DisplayNameFor(model => model.Make)
         </dt>
 
